--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello this is my portfolio 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color: aquamarine;"></body>
+    <h1>Introduction - Abhishek Benny</h1>
+    <p>Abhishek was born in narsipatnam,vizag he completed his primary studies in his local area and later migrated to gujarat for completing his engineering in computer science and artificial intelligence</p>
+
+
+</body>
+</html>
